<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SCAR</string>
    <string name="store_app">STORE</string>
    <string name="retrieve_app">RETRIEVE</string>
    <string name="file_app">FILES</string>
    <string name="servers_app">SERVERS</string>
    <string name="new_server_app">SERVERS</string> 
    <string name="about_app">HOME</string>
    <string name="login_app">LOGIN</string>
    <string name="cp_app">CREATE PASSWORD</string>
    <string name="ms_app">MODIFY SERVER</string>
    <string name="as_app">ADD SERVER</string>
    <string name="mf_app">META FILE</string>
 
    <string name="action_about">About</string>
    <string name="hello_world"><u>Welcome to SCAR!</u></string>
    <string name = "store_btn">STORE</string>
    <string name = "retrieve_btn">RETRIEVE</string>
    <string name= "getImage">SELECT ITEM</string>
    <string name = "getDoc">RETRIEVE ITEM</string>
    <string name = "new_server"> Add A New Server!</string>
    <string name = "Pass"> Enter A Password:</string>
    <string name = "fname">Enter A File Name:</string>
    <string name = "store">STORE ITEM</string>
    <string name = "newpassword">CREATE A NEW PASSWORD</string>
    <string name = "login">SCAR LOGIN</string>
    <string name = "loginbutton">LOGIN</string>
            
    <string name = "kind">Store</string>
                
    <string name = "search_by">Search File Name:</string>
    
    <string name = "submit_new_server">ADD NEW SERVER</string>
    <string name = "delete_server">DELETE SERVER</string>

 	
 	<string name = "retrieve_pass">Enter Document Retrieval Password:</string>

    <string name="createpass">Create Password</string>
    <string name="createpass_hint">A password must be at least 12 characters, contain a symbol !,@,$,%,^, or *, contain an uppercase letter, a lower case letter, and a digit.</string>
    <string name="createpassbutton">CREATE</string>
    <string name="generatepassbutton">GENERATE RANDOM PASSWORD</string>
    <string name="cancelbutton">CANCEL</string>
    <string name="title_activity_add_server_layout">add_server_layout</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_add_server">addServer</string>

    <!-- Misc Strings -->
    <string name="cancel">Cancel</string>

    <!-- Add Server Strings-->
    <string name="asl_title">New Server</string>
    <string name="asl_types_prompt">Pick a server type</string>
    <string-array name="asl_server_types">
        <item>MySQL</item>
        <item>Cassandra</item>
        <item>SQLite</item>
        <item>DropBox</item>
        <item>Google Drive</item>
        <item>Box</item>
    </string-array>
    <string name="asl_servers">Server Type:</string>
    <string name="asl_label">Name:</string>
    <string name="asl_host">Host Name:</string>
    <string name="asl_dbname">Database Name:</string>
    <string name="asl_port">Port:</string>
    <string name="asl_uname">Username:</string>
    <string name="asl_pass">Password:</string>
    <string name="asl_add">Add Server</string>
    <string name="asl_token">Access Token:</string>
    <string name="asl_auth_db">Link DropBox Account</string>

    <!-- Modify Server Strings, also uses AddServer Strings -->
    <string name="ms_title">Modify Server</string>
    <string name="ms_save">Update Server</string>
    <string name="ms_delete">Deactivate Server</string>
    <string name="ms_readd">Activate Server</string>
    <string name="ms_status">Server Status:</string>

    <!-- Store Strings -->
    <string name="s_nofile">No Item Selected</string>
    <string name="s_sfhint">Enter Item Name for Server(s)</string>

    <!--MetaFile Strings-->
    <string name="filename">File Name</string>
    <string name="path">File Path(s):</string>
    <string name="servers">Server(s):</string>
    <string name="open">Open File</string>
    <string name="delete">Delete File</string>
    <string name="open_local">Open Local</string>
    <string name="delete_local">Delete Local</string>

    <!--About Strings-->
    <string name="about_title">About SCAR</string>
    <string name="about_info"> A high level overview of the project is that the algorithm will encrypt a file using and AES key that we get from SHA-256 hashing some unique information together.   Then, the newly encrypted file will have redundancy added to it using the Reed-Solomon algorithm.   This encrypted file is then broken up into N parts, which is also done by Reed-Solomon, and each of these N parts are stored randomly on the known databases(MySQL, Dropbox etc).   A hash-chain is used to figure out what server each chunk gets stored on.   The reverse is done to retrieve the file, but the interesting part is that we only need k out of N total file chunks to run the algorithm in reverse and get the original file back.   To compile and run you will need an Android IDE with an emulator.   The basic one that I used was Android Studio and Genymotion, respectively, and you would click the green play button to compile and run the program.</string>

</resources>
