<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingBottom="16dp"
    android:background = "@drawable/subtle_pattern">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/filename"
        android:gravity="center"
        android:textColor="#2b468b"
        android:textSize="32dp"
        android:id="@+id/filename"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/path"
        android:textSize="15dp"
        android:paddingTop="25dp"/>

    <ListView
        android:paddingTop="25dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/file_path"
        android:layout_weight=".9"
        android:stackFromBottom="false"
        android:longClickable="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:clickable="true" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/servers"
        android:textSize="15dp"
        android:paddingTop="25dp"/>

    <ListView
        android:paddingTop="25dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/server_list"
        android:layout_weight=".9"
        android:focusable="false"
        android:clickable="false" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/open_local"
        android:id="@+id/open_local"
        android:textColor="#98EF8E"
        android:background="@drawable/button_rounded_corners"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:layout_marginRight="15dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_weight="1"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete_local"
        android:id="@+id/delete_local"
        android:textColor="#98EF8E"
        android:background="@drawable/button_rounded_corners"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:layout_marginLeft="15dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_weight="1"/>

        </LinearLayout>

</LinearLayout>
