<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.scar.android.Activities.AddServer">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/ms_title"
        android:id="@+id/textView2"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textColor="#2B468B"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout"
        android:gravity="center_horizontal"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:text="@string/asl_servers"
            android:id="@+id/textView3" />

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ms_types"
            android:entries="@array/asl_server_types"
            android:spinnerMode="dropdown"
            android:prompt="@string/asl_types_prompt" />

    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ms_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/ms_status"
        android:layout_above="@+id/mg_update">

    </FrameLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ms_save"
        android:id="@+id/ms_update"
        android:textColor="#98EF8E"
        android:background="@drawable/button_rounded_corners"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ms_delete"
        android:id="@+id/ms_act"
        android:textColor="#98EF8E"
        android:background="@drawable/button_rounded_corners"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ms_status"
        android:contentDescription="@string/ms_status"
        android:src="@android:drawable/button_onoff_indicator_on"
        android:layout_alignBottom="@+id/textView6"
        android:layout_alignTop="@+id/textView6"
        android:layout_alignEnd="@+id/linearLayout"
        android:layout_toEndOf="@+id/textView6" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@android:style/TextAppearance.Medium"
        android:text="@string/ms_status"
        android:layout_below="@+id/linearLayout"
        android:layout_alignStart="@+id/linearLayout"
        android:id="@+id/textView6" />
</RelativeLayout>
