<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:background = "@drawable/subtle_pattern">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/createpass"
        android:gravity="center"
        android:textColor="#2b468b"
        android:textSize="32dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:layout_marginTop="-40dp">   <!---40dp is to center it with the SCAR LOGIN label-->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/createpass_hint"
            android:id="@+id/textView" />

        <EditText
            android:id="@+id/cp_pass"
            android:inputType="textMultiLine"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Enter Your Unique Password"
            android:layout_marginTop="50dp"
            android:textCursorDrawable="@drawable/blue_cursor"
            android:background="@drawable/apptheme_edit_text_holo_light"
            android:textSelectHandleLeft="@drawable/apptheme_text_select_handle_left"
            android:textSelectHandle="@drawable/apptheme_text_select_handle_middle"
            android:textSelectHandleRight="@drawable/apptheme_text_select_handle_right"/>

        <Button
            android:id="@+id/cp_create"
            android:layout_marginTop="50dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/createpassbutton"
            android:gravity="center_vertical|center_horizontal"
            android:background="@drawable/button_rounded_corners"
            android:textColor="#98EF8E"
            />

        <Button
            android:id="@+id/cp_generate"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/generatepassbutton"
            android:gravity="center_vertical|center_horizontal"
            android:background="@drawable/button_rounded_corners"
            android:textColor="#98EF8E"
            android:layout_marginTop="20dp" />

        <Button
            android:id="@+id/cp_cancel"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/cancelbutton"
            android:gravity="center_vertical|center_horizontal"
            android:background="@drawable/button_rounded_corners"
            android:textColor="#98EF8E"
            android:layout_marginTop="20dp" />

    </LinearLayout>
</LinearLayout>