<!--<?xml version="1.0" encoding="utf-8"?>

<android.support.v4.app.FragmentTabHost
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:id="@android:id/tabhost"
    xmlns:android="http://schemas.android.com/apk/res/android"
        >
    <RelativeLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#2B468B"
    >


        <TabWidget
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:id="@android:id/tabs"
        android:layout_alignParentBottom="true"
        android:gravity="bottom"
        />
        <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@android:id/tabcontent"
         >

        </FrameLayout>
    </RelativeLayout>
</android.support.v4.app.FragmentTabHost>
-->


<RelativeLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"

    android:id="@+id/pagermain"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/subtle_pattern"
    tools:context=".MainActivity"



    >
    <android.support.v4.view.ViewPager xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >




    </android.support.v4.view.ViewPager>


    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="425dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/userHomeScrollView"
        android:layout_alignParentTop="true"
        android:fillViewport="false"
        android:layout_alignParentBottom="true">

    </ScrollView>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:background="#2B468B"
        android:layout_height="48dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/userHomeBottomButtonBar"
        android:layout_alignBottom="@id/userHomeScrollView"

        >

        <Button
            android:textColor="#98EF8E"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/store_app"
            android:scaleType="fitCenter"
            android:id="@+id/homeButton" />
        <ImageView
            android:layout_width="1dp"
            android:layout_height="fill_parent"
            android:src="@drawable/divider"/>

        <Button
            android:textColor="#98EF8E"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/retrieve_app"
            android:scaleType="fitCenter"
            android:id="@+id/wallOfFameButton" />
        <ImageView
            android:layout_width="1dp"
            android:layout_height="fill_parent"
            android:src="@drawable/divider"/>

        <Button
            android:textColor="#98EF8E"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:background="?android:attr/selectableItemBackground"
            android:scaleType="fitCenter"
            android:text="@string/file_app"
            android:id="@+id/wallOfShameButton"
            />
        <ImageView
            android:layout_width="1dp"
            android:layout_height="fill_parent"
            android:src="@drawable/divider"/>

        <Button
            android:textColor="#98EF8E"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:background="?android:attr/selectableItemBackground"
            android:scaleType="fitCenter"
            android:text="@string/servers_app"
            android:id="@+id/notificationButton" />
    </LinearLayout>

</RelativeLayout>



